feat: API для построения цементного моста (просто и при равновесии)
