# src/routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 import MortarController from "./controllers/mortarController.js";
 import GNPVController from "./controllers/GNPVController.js";
+import cementBridgeController from "./controllers/cementBridgeController.js";
 
 const router = Router();
 
@@ -15,6 +16,10 @@ router.post("/mortar-weightning", MortarController.MortarWeightning);
 router.post("/well-volume", MortarController.WellVolume);
 
 router.post("/gnpv", GNPVController.JammingSheet);
+
+router.post("/cement-bridge-installation", cementBridgeController.cementBridgeInstallation);
+
+router.post("/cement-bridge-installation-on-balance", cementBridgeController.cementBridgeInstallationOnBalance);
 
 export default router;
 
